--- a/halloween/css/style.css
+++ b/halloween/css/style.css
@@ -74,8 +74,8 @@ nav ul li span{
 
 /* main - games */
 #games{
-    font-family: sans-serif;
-    font-size: 0.8em;
+    font-family: Tahoma, sans-serif;
+    font-size: 0.75em;
     margin-top: 65px;
 }
 
@@ -100,7 +100,7 @@ nav ul li span{
 }
 
 .play-button{
-    display: none;
+    visibility: hidden;
     position: absolute;
     z-index: 1;
     top: 20%;
