--- a/short_url/styles/_utilities.scss
+++ b/short_url/styles/_utilities.scss
@@ -1,6 +1,6 @@
 // colors
 $cyan: hsl(180, 66%, 49%);
-$dark-violet: hsl(257, 27%, 26%);
+$violet: hsl(257, 27%, 26%);
 $red: hsl(0, 87%, 67%);
 $gray: hsl(0, 0%, 75%);
 $grayish-violet: hsl(257, 7%, 63%);
@@ -12,6 +12,8 @@ $poppins: 'Poppins', sans-serif;
 
 //mixin for buttons
 @mixin btn {
+    cursor: pointer;
+    font-family:$poppins;
     border: none;
     outline: none;
     background-color: $cyan;
@@ -23,4 +25,29 @@ $poppins: 'Poppins', sans-serif;
         color: white; 
         opacity: 0.7;
     }
+}
+
+.fade-in{
+    animation-name: fade-in;
+    animation-duration: 0.8s;
+}
+
+.fade-out{
+    animation-name: fade-out;
+    animation-duration: 1s; 
+}
+
+@keyframes fade-in{
+    0%{ opacity: 0; }
+    100%{ opacity: 1; }
+}
+
+@keyframes fade-out{
+    0%{ opacity: 1; }
+    100%{ opacity: 0; }
+}
+
+.invalid{
+    border: 2px solid $red;
+    &::placeholder{ color: $red; }
 }
