--- a/short_url/styles/_responsive.scss
+++ b/short_url/styles/_responsive.scss
@@ -46,10 +46,11 @@
     .short-links{
         form{ 
             flex-direction: column;
+            padding: 20px;
 
-            input{ margin-right: 0; }
+            input{ margin-right: 0; padding: 5px 5px; }
             p{ order: 0; }
-            button{ margin-top:10px; }
+            button{ margin-top:10px; width: 100%; }
         }
 
         .short-link{
