--- a/short_url/styles/_responsive.scss
+++ b/short_url/styles/_responsive.scss
@@ -138,3 +138,11 @@
         }
     }
 }
+
+
+@media all and (max-width: 305px){
+    .short-links{
+        width: 95%;
+        form{ padding: 20px 5px; }
+    }
+}    
