--- a/short_url/styles/_responsive.scss
+++ b/short_url/styles/_responsive.scss
@@ -122,6 +122,8 @@
         div:first-child{ margin-bottom: 10px; }
         div:last-child{ margin-top: 25px; }
     }
+
+    .attribution{ font-size: 11px; }
 }    
 
 
