--- a/short_url/styles/_responsive.scss
+++ b/short_url/styles/_responsive.scss
@@ -134,8 +134,8 @@
 
             img{
                 position: relative; 
-                right: -20%;      
-                width: 350px;
+                right: 0;      
+                width: 100%;
             }
         }
     }
