--- a/short_url/styles/_responsive.scss
+++ b/short_url/styles/_responsive.scss
@@ -144,6 +144,7 @@
         width: 95%;
         form{ 
             padding: 20px 5px; 
+            input{ width: -webkit-fill-available; }
         }
     }
 }
