--- a/short_url/styles/_responsive.scss
+++ b/short_url/styles/_responsive.scss
@@ -134,7 +134,7 @@
 
             img{
                 position: relative; 
-                right: -25%;      
+                right: 0;      
                 width: 100%;
             }
         }
