center the ps image

--- a/clipboard/styles/_main.scss
+++ b/clipboard/styles/_main.scss
@@ -110,7 +110,7 @@ main{
                 width: 90%;
                 margin: auto;
 
-                figure{ left: 0; }
+                figure{ left: 0; margin-right: 0;}
                 .paras-3{ margin-top: 5vh; }
             }
         }
