--- a/kids_memo/styles/style.scss
+++ b/kids_memo/styles/style.scss
@@ -68,6 +68,7 @@ main{
    
 }
 
+// animation
 .fade-in{
     animation-name: fade-in;
     animation-duration: 0.5s;
@@ -78,6 +79,8 @@ main{
     100%{opacity: 100%}
 }
 
+
+// responsive
 @media all and (max-width: 820px){
     main{
         width: 90%;
@@ -85,30 +88,6 @@ main{
     }
 }
 
-// @media all and (max-width: 700px){
-//     main{
-//         width: 100%;
-//         .card{
-//             .front{
-//                 width: 100px;
-//                 height: 90px;
-//             }
-
-//             p{ 
-//                 width: 100px;
-//                 min-height: 38px; 
-//                 font-size: 0.9em;
-//                 padding: 3px 0;
-//             }
-
-//             .back{
-//                 width: 100px;
-//                 height: 133px;
-//                 margin-left: -100px;
-//             }
-//         }
-//     }
-// }
 
 @media all and (max-width: 700px){
     header{
@@ -121,8 +100,9 @@ main{
         width: 100%;
         .card{
             .front{
-                width: 60px;
+                width: 80px;
                 height: 90px;
+                border-radius: 4px;
             }
 
             p{ 
@@ -130,8 +110,26 @@ main{
             }
 
             .back{
-                width: 60px;
+                width: 80px;
                 height: 90px;
+                margin-left: -80px;
+            }
+        }
+    }
+}
+
+@media all and (max-width: 285px){
+    main{
+        width: 100%;
+        .card{
+            .front{
+                width: 60px;
+                height: 80px;
+            }
+
+            .back{
+                width: 60px;
+                height: 80px;
                 margin-left: -60px;
             }
         }
