--- a/fav-books/src/styles/Navbar.scss
+++ b/fav-books/src/styles/Navbar.scss
@@ -66,7 +66,7 @@ header{
         i{ color: #2d2d2d; }
     }
 
-    .add-book{
+    .add-book, .remove-book{
         background-color: #ec5656;
         color: #faebd6;
         &:hover{ 
