--- a/fav-books/src/styles/App.scss
+++ b/fav-books/src/styles/App.scss
@@ -14,3 +14,25 @@ body{
     grid-gap: 35px 45px;
     margin-top: 100px;
 }
+
+//responsive
+@media all and (max-width: 500px){
+    body{ font-size: 1em; } 
+    
+    .books-container{
+        grid-template-columns: repeat(auto-fill, 150px);
+        grid-gap: 30px 45px;
+        margin-top: 50px;
+        justify-content: center;
+    }
+}
+
+@media all and (max-width: 380px){ 
+    .books-container{
+        width: 95%;
+        grid-template-columns: repeat(auto-fill, 100%);
+        grid-gap: 30px 45px;
+        margin-top: 50px;
+        justify-content: center;
+    }
+}
