--- a/fav-books/src/styles/App.scss
+++ b/fav-books/src/styles/App.scss
@@ -36,3 +36,10 @@ body{
         justify-content: center;
     }
 }
+
+@media all and (max-width: 300px){
+    form{
+        .MuiFormControlLabel-root{ margin-right: 10px; }
+        .PrivateSwitchBase-root-3{ padding: 3px; }
+    }
+}
