--- a/fav-books/src/styles/Navbar.scss
+++ b/fav-books/src/styles/Navbar.scss
@@ -125,6 +125,13 @@ header{
     }
 }
 
+@media all and (max-width: 425px){
+    header{
+        .remove-book{ margin-bottom: 10px; }
+    }
+}
+
+
 @media all and (max-width: 300px){
     header{
         ul{
