--- a/fav-books/src/styles/About.scss
+++ b/fav-books/src/styles/About.scss
@@ -46,6 +46,7 @@
                 cursor: pointer;
                 background: none;
                 border: none;
+                margin-top: 10px;
             }
         }
     }
