--- a/my-chat-123/public/style.css
+++ b/my-chat-123/public/style.css
@@ -7,7 +7,9 @@ body {
     color: #494541;
 }
 
-
+button {
+    cursor: pointer;
+}
 
 #chat {
     width: 700px;
@@ -32,7 +34,7 @@ body {
     margin: 10px 5px;
 }
 
-form {
+#chat form {
     width: 80%;
     margin: auto;
     text-align: center;
@@ -59,6 +61,73 @@ form {
     flex: 1;
 }
 
+#modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    border: 3px solid #55514C;
+    padding: 10px;
+    border-radius: 10px;
+    text-align: center;
+    z-index: 10;
+    background-color: #F4F1EB;
+    width: 300px;
+    max-width: 80%;
+    transition: all 0.3s;
+    pointer-events: none;
+}
+
+#modal.active {
+    transform: translate(-50%, -50%) scale(1);
+    pointer-events: all;
+}
+
+#modal input, #modal button {
+    width: 100%;
+    box-sizing: border-box;
+    color: #494541;
+    font-size: 0.9em;
+    padding: 5px;
+}
+
+#modal input{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+#overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.4);
+    opacity: 0;
+    transition: all 0.3s;
+    pointer-events: none;
+}
+
+#overlay.active {
+    opacity: 1;
+    pointer-events: all;
+}
+
+#error {
+    color: #FF0033;
+    margin: 0;
+    text-align: left;
+    font-size: 0.85em;
+    position: relative;
+    top: 3px;
+}
+
+#user-name {
+    margin: 0 5px;
+    text-align: left;
+    color: green;
+}
+
 @media all and (max-width: 780px) {
     body {
         font-size: 1em;
@@ -73,7 +142,7 @@ form {
         font-size: 0.9em;
     }
 
-    form {
+    #chat form {
         width: 100%;
     }    
 }
